--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="club for fans of historical sites around the world">
+    <meta name="keywords" content="history, historical sites, travel, tours">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Historical Sites</title>
 </head>
 <body>
     <h1>test</h1>
