add filler content for home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,18 @@
     <title>Historical Sites</title>
 </head>
 <body>
-    <h1>test</h1>
+    <header>filler header content</header>
+    <section>
+        main image
+    </section>
+    <section>
+        main text
+    </section>
+    <section>
+        travel locations and times
+    </section>
+    <footer>
+        social media and phone number
+    </footer>
 </body>
 </html>
