add section for sign up

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         travel locations and times
     </section>
     <footer>
-        social media and phone number
+        social media and contact information
     </footer>
 </body>
 </html>
