add header links

--- a/index.html
+++ b/index.html
@@ -11,18 +11,47 @@
     <title>Historical Sites</title>
 </head>
 <body>
-    <header>filler header content</header>
+    <header>
+        <a href="index.html">
+            <h1>Historical Sites Tours</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#main_text">Sites</a>
+                </li>
+                <li>
+                    <a href="#sign_up">Sign Up</a>
+                </li>
+                <li>
+                    <a href="#social_media_and_contacts">Social Media and Contacts</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     <section>
         main image
     </section>
     <section>
-        main text
+        main text 
     </section>
+    <a id="main_text">
     <section>
         travel locations and times
     </section>
+    </a>
+    <a id="sign_up">
+    <section>
+        sign up
+    </section>
+    </a>
+    <a id="social_media_and_contacts">
     <footer>
         social media and contact information
     </footer>
+    </a>
 </body>
 </html>
