--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>Historical Sites Tours</h1>
+            <h1>Historic Sites Tours</h1>
         </a>
         <nav>
             <ul>
