--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
     </header>
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Explore History!</h2>
+            <h3>Stonehenge, Pyramids, Roman Colosseum, Terracotta Army, Easter Island & many more!</h3>
+        </div>
     </section>
     <section>
         main text 
