add sites ethos main structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="club for fans of historical sites around the world">
+    <meta name="description" content="Tours for fans of historical sites around the world">
     <meta name="keywords" content="history, historical sites, travel, tours">
 
     <link rel="stylesheet" href="assets/css/style.css">
@@ -40,8 +40,13 @@
             <h3>Stonehenge, Pyramids, Roman Colosseum, Terracotta Army, Easter Island & many more!</h3>
         </div>
     </section>
-    <section>
-        main text 
+    <section id="sites-ethos">
+        <h1>Why should you visit these places?</h1>
+        <div id="left-about">left</div>
+        <div id="right-about">right</div>
+        <div id="center-about">center</div>
+        <div id="center-top-about">centertop</div>
+        <div id="center-bottom-about">centerbottom</div>
     </section>
     <a id="main_text">
     <section>
