add text and some styling to sites ethos

--- a/index.html
+++ b/index.html
@@ -41,12 +41,76 @@
         </div>
     </section>
     <section id="sites-ethos">
-        <h1>Why should you visit these places?</h1>
-        <div id="left-about">left</div>
-        <div id="right-about">right</div>
-        <div id="center-about">center</div>
-        <div id="center-top-about">centertop</div>
-        <div id="center-bottom-about">centerbottom</div>
+        <h1>What is so special about these places?</h1>
+        <div id="left-about">
+            <div>
+                <h2>Stonehenge</h2>
+                <p>
+                    Stonehenge is a prehistoric monument on Salisbury Plain in Wiltshire, England.
+                    <hr> 
+                    It consists of a ring of huge stones which stand at a four meter length and each weighing about 25 tons!
+                    <hr>
+                    It doesn't seem very impressive until you find out that these stones were put up over 5000 years ago 
+                    and is believed to be an ancient burial ground after having found human remains dating back to 3000 BC.
+                    <hr>
+                    Scientists cannot figure out how Stonehenge was built so long ago without modern technology. 
+                </p>
+            </div>
+        </div>
+        <div id="right-about">
+            <div>
+                <h2>The Egyptian Pyramids</h2>
+                <p>
+                    The Egyptian pyramids are ancient masonry structures located in Egypt and sources cite at least 118 identified "Egyptian" pyramids and are known for their massive triangular shape.
+                    <hr>
+                    Approximately 80 pyramids were built within the Kingdom of Kush, now located in the modern country of Sudan.
+                    <hr>
+                    Of those located in modern Egypt, most were built as tombs for the country's pharaohs and their consorts during the Old and Middle Kingdom periods.
+                    <hr>
+                    The earliest among these is the Pyramid of Djoser built around 4500 years ago during the Third Dynasty.
+                </p>
+            </div>
+        </div>
+        <div id="center-about">
+            <div>
+                <h2>The Roman Colosseum</h2>
+                <p>
+                    The Roman Colosseum is an oval amphitheatre in the centre of the city of Rome, Italy, just east of the Roman Forum. 
+                    <hr>
+                    It is the largest ancient amphitheatre ever built, and is still the largest standing amphitheatre in the world today, despite its age. 
+                    <hr>
+                    Construction began under the emperor Vespasian over 1900 years ago and was finished under 10 years. 
+                    <hr>
+                    The Colosseum could fit over 80 000 spectators who would watch anything from theaters to gladiators fighting until death.
+                </p>
+            </div>
+        </div>
+        <div id="center-top-about">
+            <div>
+                <h2>The Terracotta Army</h2>
+                <p>
+                    The Terracotta Army is a collection of terracotta sculptures depicting the armies of Qin Shi Huang, the first Emperor of China. 
+                    <hr>
+                    It is a form of funerary art buried with the emperor over 2200 years ago with the purpose of protecting the emperor in his afterlife.
+                    <hr>
+                    The figures vary in height according to their roles, the tallest being the generals. 
+                    <hr>
+                    The figures include warriors, chariots and horses. Estimates from 2007 were that the three pits containing the Terracotta Army held more than 8,000 soldiers, 130 chariots with 520 horses, and 150 cavalry horses.
+                </p>
+            </div>
+        </div>
+        <div id="center-bottom-about">
+            <div>
+                <h2>Easter Island</h2>
+                <p>
+                    is an island and special territory of Chile in the southeastern Pacific Ocean, at the southeasternmost point of the Polynesian Triangle in Oceania. 
+                    <hr>
+                    The island is most famous for its nearly 1,000 extant monumental statues, called moai, which were created by the early Rapa Nui people.
+                    <hr>
+                    While many in the research community cited evidence that they arrived around the year 800, convincing data presented in a 2007 study suggests the their arrival to have been closer to 1200, over 800 years ago.
+                </p>
+            </div>
+        </div>
     </section>
     <a id="main_text">
     <section>
