changed #left-about and #right-about position from the sides to the middle

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                     <hr>
                     The figures vary in height according to their roles, the tallest being the generals. 
                     <hr>
-                    The figures include warriors, chariots and horses. Estimates from 2007 were that the three pits containing the Terracotta Army held more than 8,000 soldiers, 130 chariots with 520 horses, and 150 cavalry horses.
+                    The figures include warriors, chariots and horses.
+                    <hr>
+                    Estimates from 2007 were that the three pits containing the Terracotta Army held more than 8,000 soldiers, 130 chariots with 520 horses, and 150 cavalry horses.
                 </p>
             </div>
         </div>
@@ -103,7 +105,7 @@
             <div>
                 <h2>Easter Island</h2>
                 <p>
-                    is an island and special territory of Chile in the southeastern Pacific Ocean, at the southeasternmost point of the Polynesian Triangle in Oceania. 
+                    Easter Island is an island and special territory of Chile in the southeastern Pacific Ocean, at the southeasternmost point of the Polynesian Triangle in Oceania. 
                     <hr>
                     The island is most famous for its nearly 1,000 extant monumental statues, called moai, which were created by the early Rapa Nui people.
                     <hr>
