Changed sites ethos div ids

--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
     </section>
     <section id="sites-ethos">
         <h1>What is so special about these places?</h1>
-        <div id="left-about">
+        <div id="stonehenge">
             <div>
                 <h2>Stonehenge</h2>
+                <hr id="hr-line">
                 <p>
                     Stonehenge is a prehistoric monument on Salisbury Plain in Wiltshire, England.
                     <hr> 
@@ -57,9 +58,10 @@
                 </p>
             </div>
         </div>
-        <div id="right-about">
+        <div id="pyramid">
             <div>
                 <h2>The Egyptian Pyramids</h2>
+                <hr id="hr-line">
                 <p>
                     The Egyptian pyramids are ancient masonry structures located in Egypt and sources cite at least 118 identified "Egyptian" pyramids and are known for their massive triangular shape.
                     <hr>
@@ -71,9 +73,10 @@
                 </p>
             </div>
         </div>
-        <div id="center-about">
+        <div id="colosseum">
             <div>
                 <h2>The Roman Colosseum</h2>
+                <hr id="hr-line">
                 <p>
                     The Roman Colosseum is an oval amphitheatre in the centre of the city of Rome, Italy, just east of the Roman Forum. 
                     <hr>
@@ -85,9 +88,10 @@
                 </p>
             </div>
         </div>
-        <div id="center-top-about">
+        <div id="terracotta">
             <div>
                 <h2>The Terracotta Army</h2>
+                <hr id="hr-line">
                 <p>
                     The Terracotta Army is a collection of terracotta sculptures depicting the armies of Qin Shi Huang, the first Emperor of China. 
                     <hr>
@@ -101,9 +105,10 @@
                 </p>
             </div>
         </div>
-        <div id="center-bottom-about">
+        <div id="easter">
             <div>
                 <h2>Easter Island</h2>
+                <hr id="hr-line">
                 <p>
                     Easter Island is an island and special territory of Chile in the southeastern Pacific Ocean, at the southeasternmost point of the Polynesian Triangle in Oceania. 
                     <hr>
