add sites ethos images and style position

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <p>
                     Stonehenge is a prehistoric monument on Salisbury Plain in Wiltshire, England.
                     <hr> 
-                    It consists of a ring of huge stones which stand at a four meter length and each weighing about 25 tons!
+                    It consists of a ring of huge stones which you can see above and the stones stand at a four meter length with each weighing about 25 tons!
                     <hr>
                     It doesn't seem very impressive until you find out that these stones were put up over 5000 years ago 
                     and is believed to be an ancient burial ground after having found human remains dating back to 3000 BC.
@@ -72,6 +72,9 @@
                     The earliest among these is the Pyramid of Djoser built around 4500 years ago during the Third Dynasty.
                 </p>
             </div>
+            <div id="pyramid-img">
+                <img src="https://cdn.discordapp.com/attachments/285216662477864961/983395675079327834/pexels-mouad-mabrouk-3689863_6.jpg" alt="a picture of three pyramids in front of each other">
+            </div>
         </div>
         <div id="colosseum">
             <div>
@@ -86,6 +89,9 @@
                     <hr>
                     The Colosseum could fit over 80 000 spectators who would watch anything from theaters to gladiators fighting until death.
                 </p>
+            </div>
+            <div id="colosseum-img">
+                <img src="https://cdn.discordapp.com/attachments/285216662477864961/983396898658459658/pexels-tom-darby-6199223.jpg" alt="a picture of the roman colosseum at night">
             </div>
         </div>
         <div id="terracotta">
@@ -104,6 +110,9 @@
                     Estimates from 2007 were that the three pits containing the Terracotta Army held more than 8,000 soldiers, 130 chariots with 520 horses, and 150 cavalry horses.
                 </p>
             </div>
+            <div id="terracotta-image">
+                <img src="https://cdn.discordapp.com/attachments/285216662477864961/983399500557201468/pexels-robert-stokoe-5342720_1.jpg" alt="a picture of several terracotta men inside a building">
+            </div>
         </div>
         <div id="easter">
             <div>
@@ -116,6 +125,9 @@
                     <hr>
                     While many in the research community cited evidence that they arrived around the year 800, convincing data presented in a 2007 study suggests the their arrival to have been closer to 1200, over 800 years ago.
                 </p>
+            </div>
+            <div id="easter-image">
+                <img src="https://cdn.discordapp.com/attachments/285216662477864961/983400496645677096/pexels-andrea-vera-sasso-2819082.jpg" alt="a picture of the moai statues on easter island">
             </div>
         </div>
     </section>
