add styling to footer and top of page

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <form class="signup-form" method="POST" action="https://formdump.codeinstitute.net">
                     <h2>Sign up to get notified about future tours! <i class="fa-solid fa-plane-departure"></i></h2>
         
-                    <label for="email">Email Address</label>
+                    <label for="email">Email Address:</label>
                     <input type="email" class="text-input" id="email" required>
         
                     <input type="submit" value="Explore History!" class="submit-button">
@@ -152,7 +152,13 @@
 
     <a id="contacts">
     <footer>
-        social media and contact information
+        <ul>
+            <li>
+                <a href="https://facebook.com" class="social-media" target="_blank" rel="noopener" aria-label="Take a look at our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook-square"></i></a>
+                <a href="https://twitter.com" class="social-media" target="_blank" rel="noopener" aria-label="Take a look at our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
+                <a href="https://instagram.com" class="social-media" target="_blank" rel="noopener" aria-label="Take a look at our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram-square"></i></a>
+            </li>
+        </ul>
     </footer>
     </a>
 </body>
