center cover text and sites ethos h2 with better code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 id="logo">Historical Sites Tours</h1>
+            <h1 id="logo">Historical Site Tours</h1>
         </a>
         <nav>
             <ul id="menu">
