remove useless <a> element and add comment above <section> elements

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             </ul>
         </nav>
     </header>
+
+    <!-- this section contains the text inside the see-through text box on the hero image -->
     <section id="hero-outer">
         <div id="hero-image"></div>
         <div id="cover-text">
@@ -40,6 +42,8 @@
             <h3>Stonehenge, Pyramids, Roman Colosseum, Terracotta Army, Easter Island & many more!</h3>
         </div>
     </section>
+
+    <!-- this section contains the "What is so special about these places?" header and the 5 historical site texts -->
     <section id="sites-ethos">
         <h2>What is so special about these places?</h2>
         <div id="stonehenge">
@@ -129,6 +133,7 @@
         </div>
     </section>
 
+    <!-- this section contains the sign up field -->
     <section id="form-section">
         <form class="signup-form" method="get" action="confirmation.html">
             <h2>Sign up to get notified about future tours! <i class="fa-solid fa-plane-departure"></i></h2>
